# ChangeLog for kde-misc/kcm_tablet
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kcm_tablet/Attic/ChangeLog,v 1.4 2009/12/30 18:18:44 ssuominen Exp $

*kcm_tablet-1.1.2 (30 Dec 2009)

  30 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +kcm_tablet-1.1.2.ebuild:
  Version bump.

  28 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  kcm_tablet-1.1.1.ebuild:
  Fix deps since xf86-input-wacom-0.10.3 has xsetwacom utility again.

  13 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  kcm_tablet-1.1.1.ebuild:
  x11-drivers/linuxwacom rdepend wrt #296666

*kcm_tablet-1.1.1 (05 Dec 2009)

  05 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +kcm_tablet-1.1.1.ebuild:
  Initial commit wrt #292592, thanks to Martin Gysel for reporting.
