@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/kcm_tablet
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kcm_tablet/Attic/ChangeLog,v 1.4 2009/12/30 18:18:44 ssuominen Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kcm_tablet/Attic/ChangeLog,v 1.5 2010/02/04 22:20:57 ssuominen Exp $
+
+*kcm_tablet-1.1.3 (04 Feb 2010)
+
+  04 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
+  +kcm_tablet-1.1.3.ebuild:
+  Version bump.
 
 *kcm_tablet-1.1.2 (30 Dec 2009)
 
